--- a/pages/blog/building-a-second-brain-as-networked-thinking-tool/01-content.mdx
+++ b/pages/blog/building-a-second-brain-as-networked-thinking-tool/01-content.mdx
@@ -10,105 +10,131 @@ import {
 How often have you tried to remember something important after a busy day and felt it slip through your mental grasp? This question might seem familiar to you if you are a knowledge worker. Nowadays, knowledge workers experience an endless onslaught of demands on their time where their innate curiosity and imagination wither away under the weight of obligations. We are surrounded by knowledge yet starving for wisdom.
 
 > You might call the mantra of the modern knowledge worker: "I'm so busy"
-> 
+>
 > -- <cite>Sam Davies</cite>
 
-Research indicates that knowledge workers spend a great deal of their time - _an average of 40%_ - looking for information and discretionary activities that offer little personal satisfaction. As a result, we instinctively devote time to tedious, non-value-added activities that make us feel busy and thus important. At the same time, organisations constantly strive to do more with less and pile on as many responsibilities as knowledge workers are willing to accept. As a result, many workers report historic levels of stress, distraction and hours logged, even resulting in a global trend called [The Great Resignation](https://en.wikipedia.org/wiki/Great_Resignation).
+Research indicates that knowledge workers spend a great deal of their time - *an average of 40%* - looking for information and discretionary activities that offer little personal satisfaction. As a result, we instinctively devote time to tedious, non-value-added activities that make us feel busy and thus important. At the same time, organisations constantly strive to do more with less and pile on as many responsibilities as knowledge workers are willing to accept. As a result, many workers report historic levels of stress, distraction and hours logged, even resulting in a global trend called [The Great Resignation](https://en.wikipedia.org/wiki/Great_Resignation).
 
 ## Knowledge is power
 
-In its essence, no matter what our formal role is, knowledge work is about having to come up with new ideas, solve novel problems and communicate with each other effectively. Information is a fundamental building block in this creative process. Besides, anything you might want to accomplish in your personal and professional life requires finding and putting the correct information to use. Yet, in today's digital age, where information is more accessible than ever, we are paralysed with indecision on where to focus our attention. We consume the equivalent of 174 full newspapers of content daily, which is five times higher than in 1986. 
+In its essence, no matter what our formal role is, knowledge work is about having to come up with new ideas, solve novel problems and communicate with each other effectively. Information is a fundamental building block in this creative process. Besides, anything you might want to accomplish in your personal and professional life requires finding and putting the correct information to use. Yet, in today's digital age, where information is more accessible than ever, we are paralysed with indecision on where to focus our attention. We consume the equivalent of 174 full newspapers of content daily, which is five times higher than in 1986.
 
-Information overload heavily taxes our mental resources and leaves us constantly anxious that we will forget something. Busyness _is_ a real problem, slowly seeping into leisure time. I personally noticed it firsthand in my daily life as I was increasingly overwhelmed with a constant flood of information. Like most people, I applied all the well-known productivity hacks such as [Inbox Zero](https://blog.superhuman.com/inbox-zero-method/), [Eisenhower Matrix](https://www.productplan.com/glossary/eisenhower-matrix/#:~:text=The%20Eisenhower%20Matrix%20is%20a,to%20their%20urgency%20and%20importance.) and[ Getting Things Done](https://gettingthingsdone.com/). However, I still felt I was mentally juggling all the different pieces, unable to create and get critical work done efficiently. 
+Information overload heavily taxes our mental resources and leaves us constantly anxious that we will forget something. Busyness *is* a real problem, slowly seeping into leisure time. I personally noticed it firsthand in my daily life as I was increasingly overwhelmed with a constant flood of information. Like most people, I applied all the well-known productivity hacks such as [Inbox Zero](https://blog.superhuman.com/inbox-zero-method/), [Eisenhower Matrix](https://www.productplan.com/glossary/eisenhower-matrix/#:~:text=The%20Eisenhower%20Matrix%20is%20a,to%20their%20urgency%20and%20importance.) and[ Getting Things Done](https://gettingthingsdone.com/). However, I still felt I was mentally juggling all the different pieces, unable to create and get critical work done efficiently.
 
-So, I began researching personal knowledge management more intensively. I found that the problem isn't with the intrinsic logic of these approaches but that they don't work at the system level. Statistician and management consultant W. Edwards Deming [argues](https://deming.org/appreciation-for-a-system/) that 94% of most problems and improvements belong to the system, not the individual. So to make a real impact, we might need an integrated system to organize and unlock our creative potential rather than isolated methods and tools. 
+So, I began researching personal knowledge management more intensively. I found that the problem isn't with the intrinsic logic of these approaches but that they don't work at the system level. Statistician and management consultant W. Edwards Deming [argues](https://deming.org/appreciation-for-a-system/) that 94% of most problems and improvements belong to the system, not the individual. So to make a real impact, we might need an integrated system to organize and unlock our creative potential rather than isolated methods and tools.
 
 ## Get things out of your head
 
 The nature of work is changing rapidly: job hopping, outsourcing and automation and large mergers and acquisitions. We can now expect to spend only a few months to a few years with one organisation. These constant transitions mean our ability to capture, organise and retrieve our ideas and apply and transfer them effectively from project to project and company to company becomes more important than ever. In this fast-paced world, increasingly driven by innovation and creativity, not having a personal knowledge management (PKM) system means you are not fully leveraging what you learn. You are not collecting your ideas and making valuable connections between them.
 
 > If you don’t have a helpful system for storing bad ideas, you probably don’t have one for filing good ones.
-> 
+>
 > -- <cite>Tiago Forte</cite>
 
-The purpose of a PKM system is to allow us to be more creative and spontaneous or, as David Allen puts it: _“... a system for getting things out of your head and into objective, reviewable format”_. This system helps open up your conscious mind to focus on creating novel value. Creating such a system is a design problem. And like all design problems, it must balance and trade-off multiple priorities against each other: the balance between order and uncertainty; between being goal-directed and allowing our thinking to lead us to unexpected places; between supporting our existing viewpoints and challenging us with new ones. It can help us cultivate an [Opposable Mind](https://www.amazon.nl/Opposable-Mind-Successful-Integrative-Thinking/dp/1422118924) - the ability to hold two opposing ideas in our mind simultaneously - without taxing our ability to get things done. 
+The purpose of a PKM system is to allow us to be more creative and spontaneous or, as David Allen puts it: *“... a system for getting things out of your head and into objective, reviewable format”*. This system helps open up your conscious mind to focus on creating novel value. Creating such a system is a design problem. And like all design problems, it must balance and trade-off multiple priorities against each other: the balance between order and uncertainty; between being goal-directed and allowing our thinking to lead us to unexpected places; between supporting our existing viewpoints and challenging us with new ones. It can help us cultivate an [Opposable Mind](https://www.amazon.nl/Opposable-Mind-Successful-Integrative-Thinking/dp/1422118924) - the ability to hold two opposing ideas in our mind simultaneously - without taxing our ability to get things done.
 
-However, as nice as this sounds, the journey starts with a frictionless and practical system you can use to get things going as such a system will likely serve a lifetime and needs to adapt to your changing needs over time. So, before improving your system, you have to make it work because you will resist the whole process if your system is not fast, functional and fun to use. 
+However, as nice as this sounds, the journey starts with a frictionless and practical system you can use to get things going as such a system will likely serve a lifetime and needs to adapt to your changing needs over time. So, before improving your system, you have to make it work because you will resist the whole process if your system is not fast, functional and fun to use.
 
 ## There is no 'right' way
 
 When you explore the world of PKM, you quickly discover many ways to build such a system. There is much information, specialised software tools to choose from and many opposing views of domain experts on the implementation. However, it is essential to keep the end in mind as no matter which system you use; it has to serve you and not the other way around. There are no one-size fits all methods or apps as everyone lives in different environments and works and operates under other circumstances.
 
 > Your system can look chaotic to others, but if it brings you value and delight, it's the right one.
-> 
+>
 > -- <cite>David Allen</cite>
 
 After exploring multiple options, I settled on the book [Building a Second Brain](https://www.buildingasecondbrain.com/) by Tiago Forte to be a helpful self-help guide in my journey to build my PKM system. That's because it emphasises information management as a mindset rather than a toolset: the shift in mindset from scarcity to abundance, from obligation to service, and finally, from consuming to creating. As knowledge workers, attention is our most scarce and precious resource. The ability to intentionally and strategically allocate our attention is a competitive advantage in a distracted world. Tiago Forte forces you to rethink your relationship with information and its relation to your attention and energy.
 
 ## The Four Big Ideas
 
-The Second Brain is a collection of techniques and tools you can mix and match. These will help you create a trusted place outside your head where you can collect, connect and organise your most important ideas and insights - _while filtering out the junk_ - and use them to do your best work. A Second Brain is one searchable, accessible, easily shared private knowledge collection designed to serve a lifetime of learning and growth, not just a single use case. It has four essential capabilities that it performs for us; making our ideas concrete, revealing new associations between concepts, incubating our ideas over time and sharpening our unique perspective. The four big ideas are:
+The Second Brain is a collection of techniques and tools you can mix and match. These will help you create a trusted place outside your head where you can collect, connect and organise your most important ideas and insights - *while filtering out the junk* - and use them to do your best work. A Second Brain is one searchable, accessible, easily shared private knowledge collection designed to serve a lifetime of learning and growth, not just a single use case. It has four essential capabilities that it performs for us; making our ideas concrete, revealing new associations between concepts, incubating our ideas over time and sharpening our unique perspective. The four big ideas are:
 
-<Accordion style={{ paddingBottom: "32px", paddingTop: "16px" }} type="single" collapsible>
+<Accordion
+  style={{ paddingBottom: "32px", paddingTop: "16px" }}
+  type="single"
+  collapsible
+>
   <AccordionItem value="item-1">
-    <AccordionTrigger
-      title="Everything can be a Knowledge Asset"
-    />
+    <AccordionTrigger title="Everything can be a Knowledge Asset" />
     <AccordionContent>
       <p>
-        In the digital world, knowledge is scattered over different mediums and formats such as screenshots, articles, podcasts or other media. These so-called "Knowledge Assets" crystallise what you know in concrete form. You can use them in the future to solve a problem, save time, illuminate a concept or learn from an experience. Knowledge assets can come from the external world or your inner thoughts and are the fundamental building blocks of your Second Brain.
+        In the digital world, knowledge is scattered over different mediums and
+        formats such as screenshots, articles, podcasts or other media. These
+        so-called "Knowledge Assets" crystallise what you know in concrete form.
+        You can use them in the future to solve a problem, save time, illuminate
+        a concept or learn from an experience. Knowledge assets can come from
+        the external world or your inner thoughts and are the fundamental
+        building blocks of your Second Brain.
       </p>
     </AccordionContent>
   </AccordionItem>
   <AccordionItem value="item-2">
-    <AccordionTrigger
-      title="Capture, Organise, Distill, Express"
-    />
+    <AccordionTrigger title="Capture, Organise, Distill, Express" />
     <AccordionContent>
       <p>
-        Tiago Forte introduces the capture, organise, distil, express (CODE) method as a four-step approach to remembering what matters. Each step represents a timeless principle and is flexible and agnostic for any profession, role, or career and for whatever note-taking methods and platforms you prefer. In essence, CODE provides a map for navigating the endless stream of information coming your way every day.
+        Tiago Forte introduces the capture, organise, distil, express (CODE)
+        method as a four-step approach to remembering what matters. Each step
+        represents a timeless principle and is flexible and agnostic for any
+        profession, role, or career and for whatever note-taking methods and
+        platforms you prefer. In essence, CODE provides a map for navigating the
+        endless stream of information coming your way every day.
       </p>
     </AccordionContent>
   </AccordionItem>
   <AccordionItem value="item-3">
-    <AccordionTrigger
-      title="Being organised is a habit"
-    />
+    <AccordionTrigger title="Being organised is a habit" />
     <AccordionContent>
       <p>
-        We are used to organisational systems that are static and fixed. We expect to find a strict set of rules that tells us exactly where each item goes. However, when it comes to our knowledge, there is no such assigned spot. We are organising for actionability, and what's actionable is constantly changing. The PARA System is one of the methods to organise your Second Brain. Being organised is a habit - a repeated set of actions you take as you encounter, work with and put the information to use. The two habits most important to your Second Brain are project checklists and weekly and monthly reviews. 
-        </p>
+        We are used to organisational systems that are static and fixed. We
+        expect to find a strict set of rules that tells us exactly where each
+        item goes. However, when it comes to our knowledge, there is no such
+        assigned spot. We are organising for actionability, and what's
+        actionable is constantly changing. The PARA System is one of the methods
+        to organise your Second Brain. Being organised is a habit - a repeated
+        set of actions you take as you encounter, work with and put the
+        information to use. The two habits most important to your Second Brain
+        are project checklists and weekly and monthly reviews.
+      </p>
     </AccordionContent>
   </AccordionItem>
   <AccordionItem value="item-4">
-    <AccordionTrigger
-      title="Standardise the way you work"
-    />
+    <AccordionTrigger title="Standardise the way you work" />
     <AccordionContent>
       <p>
-        Building a Second Brain is about standardising how we work because we only improve when we standardise how we do something. Through the simple acts of capturing ideas, organising them into groups, distilling the best parts, and assembling them to create value for others, we are practising the basic moves of knowledge work in such a way that we can improve on them over time. Moreover, the products of creativity are constantly changing, and there is always a new 'hot' trend to run after, but if you go one level deeper, the process of creativity is the same as it was thousands of years ago.
+        Building a Second Brain is about standardising how we work because we
+        only improve when we standardise how we do something. Through the simple
+        acts of capturing ideas, organising them into groups, distilling the
+        best parts, and assembling them to create value for others, we are
+        practising the basic moves of knowledge work in such a way that we can
+        improve on them over time. Moreover, the products of creativity are
+        constantly changing, and there is always a new 'hot' trend to run after,
+        but if you go one level deeper, the process of creativity is the same as
+        it was thousands of years ago.
       </p>
     </AccordionContent>
-    </AccordionItem>
+  </AccordionItem>
 </Accordion>
 
-
 ## Tools for thought
-Throughout history, many tools have improved our ability to think individually and in groups, from rudimental symbols, speech and clay tablets to the printing press and books. In the computer era, we now have universal thinking tools that augment and improve our human capacities. Generally, these tools support the visualisation of our cognitive process; the mental actions involved in learning, remembering and using knowledge. However, most popular note-taking apps like [Evernote](https://evernote.com/intl/nl) and [Notion](https://www.notion.so/) are hierarchical and linear, where notes live inside folders and can be nested indefinitely. Unfortunately, the human mind does not work that way. It operates by association. With one item in its grasp, it snaps instantly to the next, which the association of thoughts suggests. Essentially, the brain is one giant web of trails where information is fluid and interconnected. Ideally, we want to use tools that augment and mimic our cognitive processes as closely as possible. 
+
+Throughout history, many tools have improved our ability to think individually and in groups, from rudimental symbols, speech and clay tablets to the printing press and books. In the computer era, we now have universal thinking tools that augment and improve our human capacities. Generally, these tools support the visualisation of our cognitive process; the mental actions involved in learning, remembering and using knowledge. However, most popular note-taking apps like [Evernote](https://evernote.com/intl/nl) and [Notion](https://www.notion.so/) are hierarchical and linear, where notes live inside folders and can be nested indefinitely. Unfortunately, the human mind does not work that way. It operates by association. With one item in its grasp, it snaps instantly to the next, which the association of thoughts suggests. Essentially, the brain is one giant web of trails where information is fluid and interconnected. Ideally, we want to use tools that augment and mimic our cognitive processes as closely as possible.
 
 #### Libraries versus forests
+
 The traditional databases used in most note-taking apps are much like libraries. You have a set of predefined classifications with labels on bookshelves. When a new book comes out, you must put it on the appropriate shelf and stick a barcode on its cover. Graph databases are more like forests. You keep a record of each new tree and use a map to reference the location of each tree. New trees can grow everywhere, so you can't put them on predefined shelves. Instead, you refer to them concerning other trees in the forest. "A new elm is growing next to a big old chestnut and a small creek." You don't have to worry about where, how or what grows in a forest. There are no forms, and the structure is not predefined. You only have to keep a record of the correlation between elements.
 
 > A graph database is free from all the constraints of the classic file tree. It is a flexible, reusable data layer that you can use for answering complex questions.
 >
 > -- <cite>Aldofo Ramirez</cite>
-    
+
 As you might have guessed, a graph database closely resembles how your brain works and is better suited for a PKM system. But why? Imagine an app with a predefined structure (traditional database). You can have notes, agenda entries, to-do lists, etc. However, a note is not an agenda entry; an agenda entry is not a to-do list. You can attach a document to a note or an agenda entry, but a document is not a note or an agenda entry. You are in trouble if you want to do complex searches, such as all documents linked to a note on agenda entries with a client. Searches for relationships are complicated, slow or even impossible. A graph database is free from all the constraints of the classic file tree. It is a flexible, reusable data layer that you can use for answering complex questions. Graph databases inherently support the fluctuating nature of knowledge.
 
 #### Choosing a tool for thought
-Tools for thought are (mostly) public goods and, as a result, are still undersupplied. However, in the last few years, many new players are entering the "connected note-taking space". The most popular ones based on a graph database are [Roam Research](https://roamresearch.com/), [Obsidian](https://obsidian.md/) and [LogSeq](https://logseq.com/). You can pick one of those three based on your personal preferences and use cases. In my case, I chose Roam Research as the tool for my PKM system. 
+
+Tools for thought are (mostly) public goods and, as a result, are still undersupplied. However, in the last few years, many new players are entering the "connected note-taking space". The most popular ones based on a graph database are [Roam Research](https://roamresearch.com/), [Obsidian](https://obsidian.md/) and [LogSeq](https://logseq.com/). You can pick one of those three based on your personal preferences and use cases. In my case, I chose Roam Research as the tool for my PKM system.
 
 ## From theory to practice
+
 After reviewing the theory and choosing the right tool, it was time to implement my PKM system. As a power user used to hierarchical and linear apps, the shift to Roam Research was quite significant as the way the database is defined rules how the app works and how the user interface is designed. It was quite a significant paradigm shift to understand better how to utilise a tool like Roam Research in my daily workflow. There are some preconceived ideas and habits you have to let go of when using such an app:
 
 - There are no folders, documents or files but only atomic units called blocks. Every block floats freely and connects to any other block in the same database. By linking blocks, you create bi-directional relationships.
@@ -116,6 +142,7 @@ After reviewing the theory and choosing the right tool, it was time to implement
 - You don't search for relationships between blocks because relationships are already part of the blocks. You can supercharge your search by using [Boolean logic](https://www.lotame.com/what-is-boolean-logic/#:~:text=Boolean%20Logic%20is%20a%20form,are%20either%20true%20or%20false.) in your search queries.
 
 #### Define your organisational system
+
 Since Roam has no structure; the first step was to define an organisational system. After some experimentation, I settled on a combination of the PARA System and the Getting Things Done method, which resulted in the PARTI abbreviation. With this system, I could capture, organise, distil and express all relevant information.
 
 - **Projects** are all short-term efforts in your life that you are working on, all with a clear end-goal. I maintain a list of future, active and completed projects. I created a project template consisting of metadata, goals, project tasks and notes.
@@ -125,21 +152,23 @@ Since Roam has no structure; the first step was to define an organisational syst
 - **The inbox** is a central place to capture all incoming information and quickly get things out of your head.
 
 #### Keep organising for actionability
-The most fundamental principle in productivity is actionability, as in how relevant a piece of information is for taking action. To constantly organise for actionability, I implemented weekly and monthly reviews. These are moments where you regularly reflect on your priorities and goals by using a personalised checklist of topics you need to evaluate. For example, my weekly review consists of checking my email inbox, calendar, tasks and "waiting for list." The monthly checklist is more top-down, where I, for example, check my list of projects, life goals and the someday/maybe list. Using these review methods, you create tight feedback loops and ensure you work on things that impact your goals the most.  
+
+The most fundamental principle in productivity is actionability, as in how relevant a piece of information is for taking action. To constantly organise for actionability, I implemented weekly and monthly reviews. These are moments where you regularly reflect on your priorities and goals by using a personalised checklist of topics you need to evaluate. For example, my weekly review consists of checking my email inbox, calendar, tasks and "waiting for list." The monthly checklist is more top-down, where I, for example, check my list of projects, life goals and the someday/maybe list. Using these review methods, you create tight feedback loops and ensure you work on things that impact your goals the most.
 
 #### Create useful lists
-Since every block in Roam is a database entry, you can create complex search queries by using Boolean logic to generate different lists and pages that support and enhance your organisational system. For example, you could create a list of all projects with the active tag, mentions of person A in your meeting notes between date X and Y or a list of all your tasks with the status TODO and the tag "waiting for." The possibilities of writing complex queries are endless and are much more precise compared to the basic search and filtering you find in most traditional apps. 
+
+Since every block in Roam is a database entry, you can create complex search queries by using Boolean logic to generate different lists and pages that support and enhance your organisational system. For example, you could create a list of all projects with the active tag, mentions of person A in your meeting notes between date X and Y or a list of all your tasks with the status TODO and the tag "waiting for." The possibilities of writing complex queries are endless and are much more precise compared to the basic search and filtering you find in most traditional apps.
 
 ## Reflections and looking forward
-After leaving my last job, I started to reflect on my time as an employee and concluded that busyness was one of the main reasons I decided to go. It was slowly seeping into my leisure time. In my role as Product Owner, I was increasingly overwhelmed with a constant flood of information and mentally juggling all the different pieces, unable to create and get critical work done efficiently. I felt like I was constantly swimming against the tide, slowly losing my innate curiosity and imagination. So, that's when I began researching personal knowledge management more intensively. Not as a silver bullet solution that fixes all problems but as a foothold for regaining routine, creativity, self-expression and fun in my personal and professional life. 
 
-Nowadays, we spend countless hours reading, listening to and watching other people's opinions about what we should do, think and live, but we make little effort to apply that knowledge and make it our own. 
+After leaving my last job, I started to reflect on my time as an employee and concluded that busyness was one of the main reasons I decided to go. It was slowly seeping into my leisure time. In my role as Product Owner, I was increasingly overwhelmed with a constant flood of information and mentally juggling all the different pieces, unable to create and get critical work done efficiently. I felt like I was constantly swimming against the tide, slowly losing my innate curiosity and imagination. So, that's when I began researching personal knowledge management more intensively. Not as a silver bullet solution that fixes all problems but as a foothold for regaining routine, creativity, self-expression and fun in my personal and professional life.
+
+Nowadays, we spend countless hours reading, listening to and watching other people's opinions about what we should do, think and live, but we make little effort to apply that knowledge and make it our own.
 
 > Instead, we became 'information hoarders and consumers', stockpiling endless amounts of content that only increased our anxiety.
 
-Tiago Forte's book Building a Second Brains offers an alternative path. It presents a way to cultivate a body of knowledge that is uniquely our own, so when the opportunity arises, we will have access to the wisdom we need to make good decisions and take the most effective action. 
+Tiago Forte's book Building a Second Brains offers an alternative path. It presents a way to cultivate a body of knowledge that is uniquely our own, so when the opportunity arises, we will have access to the wisdom we need to make good decisions and take the most effective action.
 
-After multiple iterations and experiments, I have arrived at a system that brings me value and delight in my daily workflow. However, as with all systems, it does rely on regular maintenance. I found the initial implementation effort relatively high because I had to completely change my perspective on information management and because Roam was a radically different tool than I had previously used. However, this is the price for developing a Second Brain, and that's acceptable because it's a tool meant for lifetime use. But I realise it might be too high for some. Besides, the severe time investment in the system heavily relies on adapting how we look at information and developing a heightened awareness of what information resonates and doesn't. This new way of thinking will also take serious effort and dedication to master. 
+After multiple iterations and experiments, I have arrived at a system that brings me value and delight in my daily workflow. However, as with all systems, it does rely on regular maintenance. I found the initial implementation effort relatively high because I had to completely change my perspective on information management and because Roam was a radically different tool than I had previously used. However, this is the price for developing a Second Brain, and that's acceptable because it's a tool meant for lifetime use. But I realise it might be too high for some. Besides, the severe time investment in the system heavily relies on adapting how we look at information and developing a heightened awareness of what information resonates and doesn't. This new way of thinking will also take serious effort and dedication to master.
 
-Are you thinking about building your Second Brain? Start with reading the book and determine in which part of your life you can implement personal knowledge management. Then, you can start small and mix and match a collection of tools and methods presented by the author. Most techniques are timeless, flexible, and agnostic for any profession, role, or career and for whatever note-taking methods and platforms you prefer. 
-
+Are you thinking about building your Second Brain? Start with reading the book and determine in which part of your life you can implement personal knowledge management. Then, you can start small and mix and match a collection of tools and methods presented by the author. Most techniques are timeless, flexible, and agnostic for any profession, role, or career and for whatever note-taking methods and platforms you prefer.
