--- a/pages/blog/design-for-healthcare/02-chapter.mdx
+++ b/pages/blog/design-for-healthcare/02-chapter.mdx
@@ -10,10 +10,10 @@ Toegankelijkheid betekent mensen niet buitensluiten op basis van hun beperking(e
 
 ![De vier principes voor toegankelijkhei](/blog/design-for-healthcare/four-principles.png)
 
-- ****“Perceivable”**** — Informatie moet waarneembaar zijn voor iemand. In andere woorden, het is waarneembaar voor een van de zintuigen van een persoon _(zien, horen of aanraken)_. Tekstuele informatie moet in verschillende vormen aangeboden worden zodat deze ook toegankelijk is voor mensen met een audiovisuele beperking. Als iemand blind is, moet de tekst zo opgebouwd zijn dat een schermlezer het om kan zetten naar een geschikt audioformaat of naar aanraking zodra iemand een elektronisch braille apparaat gebruikt.
-- ****“Understandable”**** — Informatie moet begrijpelijk zijn. Dit betekent dat informatie aansluit op het kennisniveau van de gebruikers en een logische structuur heeft. Voor mensen die moeite hebben met het verwerken van tekst, moet deze aangeboden worden in een taalniveau die voor hen te begrijpen is.
-- ****“Operable”**** — Een website moet bedienbaar zijn. Dat wil zeggen dat als iemand een toetsenbord gebruikt, hij of zij dezelfde taken kan voltooien als iemand die gebruik maakt van een muis. Veel voorkomende taken zijn bijvoorbeeld navigeren van pagina A naar B, het invullen van formulieren om informatie te verstrekken en het indrukken van bedieningselementen zoals knoppen waaraan acties gekoppeld zijn.
-- ****“Robust”**** — Als laatste moet een website robuust zijn. Dit betekent dat een webpagina hetzelfde blijft functioneren ongeacht de omstandigheden _(webbrowser)_ en apparatuur _(mobiel, schermlezer)_ waarmee een gebruiker de webpagina bezoekt.
+- **Perceivable** — Informatie moet waarneembaar zijn voor iemand. In andere woorden, het is waarneembaar voor een van de zintuigen van een persoon _(zien, horen of aanraken)_. Tekstuele informatie moet in verschillende vormen aangeboden worden zodat deze ook toegankelijk is voor mensen met een audiovisuele beperking. Als iemand blind is, moet de tekst zo opgebouwd zijn dat een schermlezer het om kan zetten naar een geschikt audioformaat of naar aanraking zodra iemand een elektronisch braille apparaat gebruikt.
+- **Understandable** — Informatie moet begrijpelijk zijn. Dit betekent dat informatie aansluit op het kennisniveau van de gebruikers en een logische structuur heeft. Voor mensen die moeite hebben met het verwerken van tekst, moet deze aangeboden worden in een taalniveau die voor hen te begrijpen is.
+- **Operable** — Een website moet bedienbaar zijn. Dat wil zeggen dat als iemand een toetsenbord gebruikt, hij of zij dezelfde taken kan voltooien als iemand die gebruik maakt van een muis. Veel voorkomende taken zijn bijvoorbeeld navigeren van pagina A naar B, het invullen van formulieren om informatie te verstrekken en het indrukken van bedieningselementen zoals knoppen waaraan acties gekoppeld zijn.
+- **Robust** — Als laatste moet een website robuust zijn. Dit betekent dat een webpagina hetzelfde blijft functioneren ongeacht de omstandigheden _(webbrowser)_ en apparatuur _(mobiel, schermlezer)_ waarmee een gebruiker de webpagina bezoekt.
 
 Als een van deze vier voorwaarden mislukt, dan kan een persoon de taak: _“Het online afsluiten van een zorgverzekering”_ niet voltooien. Daarom liggen bovenstaande vier principes aan de basis van de _“Web Content Accessibility Guidelines”_. Door tijdens de ontwikkeling van een webapplicatie deze richtlijnen consequent toe te passen, ontwerp je inclusief.
 
@@ -23,9 +23,9 @@ Toegankelijkheid is relatief en contextafhankelijk. Hoe toegankelijk iets is, ka
 
 Producten en diensten worden nog (te) vaak ontworpen met de ‘perfecte’ gebruikers in het achterhoofd. In de ontwerpwereld ook wel bekend als persona’s. Feit is echter dat producten in verschillende situaties gebruikt worden en dat functionele vaardigheden tussen mensen enorm variëren:
 
-- **Zicht en gehoor** — *Van perfect tot geen*
-- **Geletterdheid en geheugen** — *Sterke variatie als gevolg van veelvoorkomende aandoeningen zoals dyslexie, autisme, dementie, hersenletsel en stress*
-- **Fysiek vermogen** — *Grote verschillen in mobiliteit, behendigheid, kracht en pijnniveaus*
+- **Zicht en gehoor** — Van perfect tot geen
+- **Geletterdheid en geheugen** — Sterke variatie als gevolg van veelvoorkomende aandoeningen zoals dyslexie, autisme, dementie, hersenletsel en stress
+- **Fysiek vermogen** — Grote verschillen in mobiliteit, behendigheid, kracht en pijnniveaus
 
 Een beperking is breder dan alleen een gezondheidsprobleem. Het is een complex fenomeen dat de interactie tussen de functies van een persoons lichaam en de omgeving waarin hij of zij leeft reflecteert ([WHO, 2019](https://www.who.int/topics/disabilities/en/)). Naast permanente beperkingen ervaart iedereen tijdelijke en situationele beperkingen. Tijdelijke beperkingen kunnen veroorzaakt worden door ziekte of letsel zoals een gebroken arm. Voorbeelden van situationele beperkingen zijn niet goed kunnen horen in een lawaaierige ruimte of een scherm niet goed kunnen aflezen in fel zonlicht.
 
