--- a/pages/blog/design-for-healthcare/02-chapter.mdx
+++ b/pages/blog/design-for-healthcare/02-chapter.mdx
@@ -8,7 +8,7 @@ Een van de mogelijke keerzijden van digitalisering is dat het verschillen tussen
 
 Toegankelijkheid betekent mensen niet buitensluiten op basis van hun beperking(en). Personen kunnen zelfstandig een taak kunnen volbrengen in een vergelijkbare hoeveelheid tijd en moeite als iemand die geen beperking heeft. Een taak kan bijvoorbeeld zijn: “Het online aanvragen van een zorgverzekering”. Om deze taak goed af te ronden, zijn er vier essentiële voorwaarden waaraan voldaan moet worden [(Duggin, 2016)](https://accessibility.blog.gov.uk/2016/05/16/what-we-mean-when-we-talk-about-accessibility-2/). Deze vier principes vormen de basis van de _“Web Content Accessibility Guidelines”:_
 
-![De vier principes voor toegankelijkhei](/blog/design-for-healthcare/four-principles.png)
+![De vier principes voor toegankelijkheid](/blog/design-for-healthcare/four-principles.png)
 
 - **Perceivable** — Informatie moet waarneembaar zijn voor iemand. In andere woorden, het is waarneembaar voor een van de zintuigen van een persoon _(zien, horen of aanraken)_. Tekstuele informatie moet in verschillende vormen aangeboden worden zodat deze ook toegankelijk is voor mensen met een audiovisuele beperking. Als iemand blind is, moet de tekst zo opgebouwd zijn dat een schermlezer het om kan zetten naar een geschikt audioformaat of naar aanraking zodra iemand een elektronisch braille apparaat gebruikt.
 - **Understandable** — Informatie moet begrijpelijk zijn. Dit betekent dat informatie aansluit op het kennisniveau van de gebruikers en een logische structuur heeft. Voor mensen die moeite hebben met het verwerken van tekst, moet deze aangeboden worden in een taalniveau die voor hen te begrijpen is.
