--- a/pages/blog/design-for-healthcare/03-chapter.mdx
+++ b/pages/blog/design-for-healthcare/03-chapter.mdx
@@ -3,17 +3,21 @@
 Waarom zouden we moeten ontwerpen voor toegankelijkheid? Welke meerwaarde levert het ons als bedrijf op? Het ontwikkelen van online diensten in de zorg brengt al genoeg uitdagingen met zich mee: _privacy, terminologie, wetgeving, transparantie, versplinterde werkprocessen, gesloten systemen, tegenstrijdige belangen (en Internet Explorer … )._ Zouden we ons om nog een ‘extra’ ding druk moeten maken? Ja, want:
 
 ### Kleine aanpassingen, grote impact
+
 Vroeg of laat komt iedereen tijdens zijn leven in aanraking met de zorg: in de rol van mantelzorger, door eigen ziekte of beperking of door ouderdom. Meer dan de helft van de bevolking ouder dan 65 jaar ervaart een vorm van een handicap. Waar sommigen bevoorrecht zijn met een relatief lang en gezond leven, hebben anderen minder geluk en worden of zijn ze door ziekte of beperking voor de rest van hun leven (volledig) afhankelijk van zorg. Wanneer dit gebeurt, wil je met zo weinig mogelijk gedoe goede zorg kunnen regelen voor jezelf of een ander. Het leren leven met een beperking is al moeilijk genoeg. Dus als je met een paar “kleine” aanpassingen het leven van deze mensen makkelijker kan maken, dan moet je dat gewoon doen.
 
 ### Wetgeving
-Via het “__[Tijdelijk Besluit Digitale Toegankelijkheid Overheid (2018)](https://www.digitoegankelijk.nl/beleid/wet-en-regelgeving/huidig-beleid-besluit-digitale-toegankelijkheid)__” wordt het toepassen van de WCAG een wettelijke verplichting voor alle overheidsorganisaties. Vanaf september 2020 moeten websites van overheidsorganisaties voldoen aan de eisen en vanaf juni 2021 ook alle mobiele applicaties. Hoewel er voor de zorgsector nog geen specifieke wetgeving is, heeft het [Informatieberaad Zorg](https://www.informatieberaadzorg.nl/actueel/nieuws/2018/12/12/digitale-toegankelijkheid-in-de-zorg-wordt-het-nieuwe-normaal) besloten de WCAG toe te laten tot het duurzaam informatiestelsel. Met dit besluit hebben zorgaanbieders, zorgverzekeraars en het VWS uitgesproken dat digitale zorginformatie voor iedereen bruikbaar moet zijn.
+
+Via het “**[Tijdelijk Besluit Digitale Toegankelijkheid Overheid (2018)](https://www.digitoegankelijk.nl/beleid/wet-en-regelgeving/huidig-beleid-besluit-digitale-toegankelijkheid)**” wordt het toepassen van de WCAG een wettelijke verplichting voor alle overheidsorganisaties. Vanaf september 2020 moeten websites van overheidsorganisaties voldoen aan de eisen en vanaf juni 2021 ook alle mobiele applicaties. Hoewel er voor de zorgsector nog geen specifieke wetgeving is, heeft het [Informatieberaad Zorg](https://www.informatieberaadzorg.nl/actueel/nieuws/2018/12/12/digitale-toegankelijkheid-in-de-zorg-wordt-het-nieuwe-normaal) besloten de WCAG toe te laten tot het duurzaam informatiestelsel. Met dit besluit hebben zorgaanbieders, zorgverzekeraars en het VWS uitgesproken dat digitale zorginformatie voor iedereen bruikbaar moet zijn.
 Daarnaast gaan zorginstellingen en verzekeraars hun ICT-leveranciers vragen om bij het realiseren en onderhouden van apps en websites aan te sluiten bij de WCAG. Als leverancier van een online platform aan gemeenten en zorginstellingen, is het dus van cruciaal belang voor ons om aan te sluiten bij deze wetgeving.
 
 ### Betere gebruikservaring voor iedereen
+
 Als je kijkt naar de richtlijnen waaraan je moet voldoen om een website of app toegankelijk te maken dan lijkt dit in eerste instantie erg limiterend. In de praktijk blijkt echter het tegenovergestelde waar. Het consequent toepassen van deze regels in het ontwerp- en ontwikkelproces maakt de gebruikservaring beter voor iedereen, ook voor mensen die geen beperking hebben. Beeldschermen met een hoog contrast zijn aanvankelijk ontworpen voor mensen met een visuele beperking. Tegenwoordig profiteert bijna iedereen van deze uitvinding zodra ze een apparaat gebruiken in fel zonlicht. Hetzelfde geldt voor afstandsbedieningen, automatische deuropeners en audioboeken.
-Door bewust na te denken over het brede spectrum van permanente, tijdelijke en situationele beperkingen ontstaat er nieuw inzicht in hoe een product of dienst kan schalen naar — _en bruikbaar kan zijn voor_ — een veel bredere doelgroep.
+Door bewust na te denken over het brede spectrum van permanente, tijdelijke en situationele beperkingen ontstaat er nieuw inzicht in hoe een product of dienst kan schalen naar — *en bruikbaar kan zijn voor* — een veel bredere doelgroep.
 
 ### Waardecreatie voor het bedrijf
+
 Uitspraken zoals _“Toegankelijke oplossingen maken is te duur en te complex” of “Personen met een beperking zijn geen onderdeel van de doelgroep die wij als bedrijf willen bereiken”_ kunnen gebruikt worden door bedrijven die zich willen onthouden van de discussie rondom toegankelijkheid. Dit zijn echter allemaal drogredenen. Het ontwerpen voor toegankelijkheid levert juist veel extra waarde op voor een bedrijf ([W3C, 2019](https://www.w3.org/WAI/business-case/)):
 
 - **Innovatie stimuleren** — Functies gericht op toegankelijkheid in producten en diensten lossen vaak onverwachte problemen op. In begin 2000 gebruikten steeds meer mensen mobiele apparaten. Toegankelijke websites bleken in veel gevallen beter geschikt voor mobiel gebruik omdat ze niet afhankelijk waren van muis-input. Deze openbaring leidde tot de welbekende _“responsive design”_ trend, waarin toegankelijkheid centraal staat.
